--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ html, body { height: 100%; }
 
 body {
   color: #333;
-  font-family: 'Carrois Gothic SC', sans-serif;
+  font-family: 'Carrois Gbitchc SC', sans-serif;
   background-color: #F5DEB3;
   }
 
